tenzir/bats/data/reference/cron/test_cron_errors/step_01.ref
error: bad cron expression: Specified range exceeds maximum
 --> <input>:1:6
  |
1 | cron "120 * * * * *", { version }
  |      ^^^^^^^^^^^^^^^ 
  |